# CarNamberDetectetion

./: .gitignore  .gitmodules  README.md  dvc.yaml  env-setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: checks.yml  functional.yml
scripts/: api.py  cli.py  create_annotations.py  create_config.py  create_list_files.py  create_test_dataset.py  detect.py  recognize.py
scripts/api/: detect.py
