[project]
name = "CarNumberDetection"
version = "0.0.1"

[tool.black]
line-length = 70
target-version = ['py36']
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | \.venv
  | dist
  | docs
  | yolov7
  | yolov5
)/
'''

[tool.isort]
profile = 'black'
src_paths = ['scripts']
line_length = 70
lines_after_imports = 2
force_single_line = 'True'
force_sort_within_sections = 'True'
order_by_type = 'False'
skip_glob = 'yolov7,yolov5'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "--color=yes"
